# Proyecto-final-POO

./: CMakeLists.txt  main.cpp
.github/workflows/: tests.yml
controlador/: ControladorConsola.cpp  ControladorConsola.h
modelo/: Baraja.cpp  Baraja.h  Carta.cpp  Carta.h  Crupier.cpp  Crupier.h  Jugador.cpp  Jugador.h
tests/: CMakeLists.txt  test_baraja.cpp  test_jugador.cpp
vista/: VistaConsola.cpp  VistaConsola.h
